--- a/tailwind/desktop_7.html
+++ b/tailwind/desktop_7.html
@@ -12,17 +12,17 @@
 </head>
 
 <body class="h-screen g-b">
-    <header class="bg-1f2937 semibold">
+    <header class="bg-111827 semibold">
         <nav class="w-4/5 m-ct flex text-white py-12">
-            <div class="w-7/12 flex">
-                <img src="/images/Vector 1.png" alt="">
-                <div class="ml-4 pt-4 fz-18">Free-Bitcoins</div>
+            <div class="w-7/12 flex ">
+                <img class="abbbb" src="/images/Vector 1.png" alt="">
+                <div class="ml-4 fz-18">Free-Bitcoins</div>
             </div>
             <div class="w-5/12 text-right">
                 <ul class="flex pt-4 justify-content">
-                    <li class="w-3/12 fz-16"><a href="#">Home Page</a></li>
-                    <li class="w-3/12 fz-16"><a href="#">Game</a></li>
-                    <li class="w-3/12 fz-16"><a href="#">Affiliate</a></li>
+                    <li class="w-2/12 fz-16"><a href="#">Home Page</a></li>
+                    <li class="w-2/12 fz-16"><a href="#">Game</a></li>
+                    <li class="w-2/12 fz-16"><a href="#">Affiliate</a></li>
                     <li class="w-3/12 fz-16">
                         <select name="" id="" class="bg-1f2937">
                             <option value="1">10.0000121 <span>BTC</span></option>
@@ -30,6 +30,7 @@
                             <option value="3">1.32200121 <span>USD</span></option>
                         </select>
                     </li>
+                    <li class="w-3/12"><a href="#"><div class="bg-yellow-500 rounded-full "></div></a></li>
                 </ul>
             </div>
         </nav>
