--- a/tailwind/test.html
+++ b/tailwind/test.html
@@ -21,6 +21,7 @@
 </style>
 
 <body>
+    <p>Annna <img class="abbbb" src="/images/Vector 1.png" alt=""></p>
     <div>a</div>
     <div>bgit </div>
     <div>gdakgit pus</div>
