--- a/tailwind/desktop_7.html
+++ b/tailwind/desktop_7.html
@@ -14,9 +14,8 @@
 <body class="h-screen g-b">
     <header class="bg-111827 semibold">
         <nav class="w-4/5 m-ct flex text-white py-12">
-            <div class="w-7/12 flex ">
-                <img class="abbbb" src="/images/Vector 1.png" alt="">
-                <div class="ml-4 fz-18">Free-Bitcoins</div>
+            <div class="flex w-7/12">
+                <img class="aaa" src="/images/Vector 1.png" alt="">Free-Bitcoins
             </div>
             <div class="w-5/12 text-right">
                 <ul class="flex pt-4 justify-content">
