--- a/tailwind/test.html
+++ b/tailwind/test.html
@@ -2,6 +2,7 @@
 <html>
 <script src="/js/Chart.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
 <style>
     #myContainer {
         width: 400px;
@@ -18,10 +19,21 @@
         bottom: 0;
         transition: cubic-bezier(0.075, 0.82, 0.165, 1);
     }
+    .aaa{
+    vertical-align: middle;
+}
 </style>
 
 <body>
-    <p>Annna <img class="abbbb" src="/images/Vector 1.png" alt=""></p>
+    <div class="aac">
+        <div class="aac w-7/12">
+            <img class="aaa" src="/images/Vector 1.png" alt="">Free-kkk
+        </div>
+        <div>a</div>
+        <div>a</div>
+    </div>
+    
+    <div class="flex"><img style="vertical-align: middle;" src="/images/Vector 1.png" alt="">zádds </div> 
     <div>a</div>
     <div>bgit </div>
     <div>gdakgit pus</div>
