--- a/tailwind/desktop_7.html
+++ b/tailwind/desktop_7.html
@@ -15,7 +15,9 @@
     <header class="bg-111827 semibold">
         <nav class="w-4/5 m-ct flex text-white py-12">
             <div class="flex w-7/12">
-                <img class="aaa" src="/images/Vector 1.png" alt="">Free-Bitcoins
+                <img class="flex" src="/images/Vector 1.png" alt="">
+                <div class="pt-4 pl-2">Free-Bitcoins</div>
+
             </div>
             <div class="w-5/12 text-right">
                 <ul class="flex pt-4 justify-content">
@@ -29,7 +31,9 @@
                             <option value="3">1.32200121 <span>USD</span></option>
                         </select>
                     </li>
-                    <li class="w-3/12"><a href="#"><div class="bg-yellow-500 rounded-full "></div></a></li>
+                    <li class="w-3/12"><a href="#">
+                            <div class="bg-yellow-500 rounded-full "></div>
+                        </a></li>
                 </ul>
             </div>
         </nav>
