--- a/tailwind/desktop_7.html
+++ b/tailwind/desktop_7.html
@@ -46,7 +46,7 @@
             <p class="text-white fz-20 semibold py-12">Games</p>
             <div class="flex">
                 <div class="w-32-03-pt text-white">
-                    <div class="rounded-lg bg-1f2937 h-72 mb-10"></div>
+                    <div class="rounded-lg bg-1f2937 h-72 mb-10 mr-12"></div>
                     <div class="fz-26 medium">Crash</div>
                     <p class="fz-18 regular">Watch the Multipiler go to the infinits</p>
                 </div>
