--- a/tailwind/wallet_page.html
+++ b/tailwind/wallet_page.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="../tailwind/custom.css">
     <script src="/js/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    
+
 </head>
 
 <body class="h-screen g-b bg-black">
@@ -38,7 +37,7 @@
             </div>
         </nav>
     </header>
-    <section class="bg-black">
+    <section class="bg-111827">
         <div class="w-4/5 m-ct flex text-white">
             <div class="w-15-039 fz-48 semibold">Deposit</div>
             <div class="w-84-96">
@@ -87,7 +86,10 @@
                         <li class="mx-4"><a href="#">Segwit</a></li>
                     </div>
                     <div>
-                        <div class="flex rounded-lg bg_374151 ml-4 mt-2 py-2 w-4/5"><span class="pl-2 w-11/12 overflow-x-hidden">1KDCkBvuPcmyLWhPmyhb72tyVkHp58DEF</span><span class="w-1/12"><img class="object-cover" src="/images/document-duplicate.png" alt=""></span> </div>
+                        <div class="flex rounded-lg bg_374151 ml-4 mt-2 py-2 w-4/5"><span
+                                class="pl-2 w-11/12 overflow-x-hidden">1KDCkBvuPcmyLWhPmyhb72tyVkHp58DEF</span><span
+                                class="w-1/12"><img class="object-cover" src="/images/document-duplicate.png"
+                                    alt=""></span> </div>
                     </div>
                 </div>
                 <div class="w-2/12">
@@ -97,9 +99,12 @@
         </div>
         <div class="w-4/5 m-ct text-white py-12">
             <h3 class="fz-48 semibold">Withdraw</h3>
-            <div class="flex">
+            <div class="flex py-12">
                 <div class="w-2/4 regular fz-16">
-                    <p class="my-12">For security purposes, any large or suspicious withdrawal amounts will be audited and manually processed. The manual audit process typically takes between 1-6 hours, and in certain circumstances, might take longer in certain circumstances. As always we appreciate your patience!</p>
+                    <p class="mb-12">For security purposes, any large or suspicious withdrawal amounts will be audited
+                        and manually processed. The manual audit process typically takes between 1-6 hours, and in
+                        certain circumstances, might take longer in certain circumstances. As always we appreciate your
+                        patience!</p>
                     <div>Withdraw Currency</div>
                     <div class="rounded-lg bg-1f2937 py-2 my-6 pl-4">0.0000121</div>
                     <div>Withdraw Email</div>
@@ -115,12 +120,14 @@
         </div>
     </section>
     <section class="bg-1f2937 text-white">
-        <div class="w-4/5 m-ct">
+        <div class="w-4/5 m-ct py-24">
             <h3 class="fz-48 semibold">Transaction </h3>
             <div>
                 <ul class="flex">
-                    <li class="mr-6 text-4xl tablinks" onclick="openCity(event, 'button_1')" id="defaultOpen"><a href="#">Deposit</a></li>
-                    <li class="mx-6 text-4xl tablinks" onclick="openCity(event, 'button_2')"><a href="#">From Altcoin</a></li>
+                    <li class="mr-6 text-4xl tablinks" onclick="openCity(event, 'button_1')" id="defaultOpen"><a
+                            href="#">Deposit</a></li>
+                    <li class="mx-6 text-4xl tablinks" onclick="openCity(event, 'button_2')"><a href="#">From
+                            Altcoin</a></li>
                     <li class="mx-6 text-4xl tablinks" onclick="openCity(event, 'button_3')"><a href="#">Withdraw</a>
                     </li>
                     <li class="mx-6 text-4xl tablinks" onclick="openCity(event, 'button_4')"><a href="#">Bill</a>
@@ -130,9 +137,13 @@
             <!-- deposit -->
             <div id="button_1" class="tabcontent py-12">
                 <div class="flex">
-                    <div class="flex bg_374151 rounded-lg py-2 px-2"><img class="px-2" src="/images/credit-card.png" alt=""><span class="px-2">0.0000121</span>BTC</div>
-                    <div class="flex bg_374151 rounded-lg py-2 px-2 mx-6"><span class="px-2">20</span><img class="px-2" src="/images/chevron-right.png" alt=""> </div>
-                    <div class="flex bg_374151 rounded-lg py-2 px-2">Total <span class="px-2">0</span><img src="/images/chevron-left.png" alt=""><span class="px-4">1</span><img src="/images/chevron-right.png" alt=""> </div>
+                    <div class="flex bg_374151 rounded-lg py-2 px-2"><img class="px-2" src="/images/credit-card.png"
+                            alt=""><span class="px-2">0.0000121</span>BTC</div>
+                    <div class="flex bg_374151 rounded-lg py-2 px-2 mx-6"><span class="px-2">20</span><img class="px-2"
+                            src="/images/chevron-right.png" alt=""> </div>
+                    <div class="flex bg_374151 rounded-lg py-2 px-2">Total <span class="px-2">0</span><img
+                            src="/images/chevron-left.png" alt=""><span class="px-4">1</span><img
+                            src="/images/chevron-right.png" alt=""> </div>
                 </div>
                 <table class="text-white w-full my-12 fz-20 ">
                     <tr class="text-left fz-26 medium">
@@ -201,9 +212,13 @@
             <!-- Altcoin -->
             <div id="button_2" class="tabcontent py-12">
                 <div class="flex">
-                    <div class="flex bg_374151 rounded-lg py-2 px-2"><img class="px-2" src="/images/credit-card.png" alt=""><span class="px-2">0.0000121</span>BTC</div>
-                    <div class="flex bg_374151 rounded-lg py-2 px-2 mx-6"><span class="px-2">20</span><img class="px-2" src="/images/chevron-right.png" alt=""> </div>
-                    <div class="flex bg_374151 rounded-lg py-2 px-2">Total <span class="px-2">0</span><img src="/images/chevron-left.png" alt=""><span class="px-4">1</span><img src="/images/chevron-right.png" alt=""> </div>
+                    <div class="flex bg_374151 rounded-lg py-2 px-2"><img class="px-2" src="/images/credit-card.png"
+                            alt=""><span class="px-2">0.0000121</span>BTC</div>
+                    <div class="flex bg_374151 rounded-lg py-2 px-2 mx-6"><span class="px-2">20</span><img class="px-2"
+                            src="/images/chevron-right.png" alt=""> </div>
+                    <div class="flex bg_374151 rounded-lg py-2 px-2">Total <span class="px-2">0</span><img
+                            src="/images/chevron-left.png" alt=""><span class="px-4">1</span><img
+                            src="/images/chevron-right.png" alt=""> </div>
                 </div>
                 <table class="text-white w-full my-12 fz-20 ">
                     <tr class="text-left fz-26 medium">
@@ -272,9 +287,13 @@
             <!-- Withdraw -->
             <div id="button_3" class="tabcontent py-12">
                 <div class="flex">
-                    <div class="flex bg_374151 rounded-lg py-2 px-2"><img class="px-2" src="/images/credit-card.png" alt=""><span class="px-2">0.0000121</span>BTC</div>
-                    <div class="flex bg_374151 rounded-lg py-2 px-2 mx-6"><span class="px-2">20</span><img class="px-2" src="/images/chevron-right.png" alt=""> </div>
-                    <div class="flex bg_374151 rounded-lg py-2 px-2">Total <span class="px-2">0</span><img src="/images/chevron-left.png" alt=""><span class="px-4">1</span><img src="/images/chevron-right.png" alt=""> </div>
+                    <div class="flex bg_374151 rounded-lg py-2 px-2"><img class="px-2" src="/images/credit-card.png"
+                            alt=""><span class="px-2">0.0000121</span>BTC</div>
+                    <div class="flex bg_374151 rounded-lg py-2 px-2 mx-6"><span class="px-2">20</span><img class="px-2"
+                            src="/images/chevron-right.png" alt=""> </div>
+                    <div class="flex bg_374151 rounded-lg py-2 px-2">Total <span class="px-2">0</span><img
+                            src="/images/chevron-left.png" alt=""><span class="px-4">1</span><img
+                            src="/images/chevron-right.png" alt=""> </div>
                 </div>
                 <table class="text-white w-full my-12 fz-20 ">
                     <tr class="text-left fz-26 medium">
@@ -343,81 +362,103 @@
             <!-- Bill -->
             <div id="button_4" class="tabcontent py-12">
                 <div class="flex">
-                    <div class="flex w-4/5">
-                        <div class="flex bg_374151 rounded-full py-2 px-2"><img class="px-2" src="/images/credit-card.png" alt=""><span class="px-2">0.0000121</span>BTC</div>
-                        <div class="flex bg_374151 rounded-full py-2 px-2 mx-6"><span class="px-2">20</span><img class="px-2" src="/images/chevron-right.png" alt=""> </div>
-                        <div class="flex bg_374151 rounded-full py-2 px-2">Total <span class="px-2">0</span><img src="/images/chevron-left.png" alt=""><span class="px-4">1</span><img src="/images/chevron-right.png" alt=""> </div>
+                    <div class="flex w-5/6">
+                        <div class="flex bg_374151 rounded-full py-2 px-2"><img class="px-2"
+                                src="/images/credit-card.png" alt=""><span class="px-2">0.0000121</span>BTC</div>
+                        <div class="flex bg_374151 rounded-full py-2 px-2 mx-6"><span class="px-2">20</span><img
+                                class="px-2" src="/images/chevron-right.png" alt=""> </div>
+                        <div class="flex bg_374151 rounded-full py-2 px-2">Total <span class="px-2">0</span><img
+                                src="/images/chevron-left.png" alt=""><span class="px-4">1</span><img
+                                src="/images/chevron-right.png" alt=""> </div>
                     </div>
-                    <div class="flex w-1/5">
-                        <div class="flex bg_374151 rounded-full py-2 px-2"><img src="/images/calendar.png" alt=""><span>11</span>/<span>5</span>/<span>2020</span>-<span>20</span>/<span>5</span>/<span>2020</span></div>
+                    <div class="flex w-1/6">
+                        <div class="flex bg_374151 rounded-full w-full py-2 px-2">
+                            <img class="px-6" src="/images/calendar.png"
+                                alt=""><span>11</span>/<span>5</span>/<span>2020</span>-<span>20</span>/<span>5</span>/<span>2020</span>
+                        </div>
                     </div>
                 </div>
-                <table class="text-white w-full my-12 fz-20 ">
-                    <tr class="text-left fz-26 medium">
-                        <th class="w-16-9-pt">Time</th>
-                        <th class="w-33-9-pt">Amount</th>
-                        <th class="w-33-9-pt">State</th>
-                        <th class="w-16-9-pt pl-28">Transactions</th>
-                    </tr>
-                    <tr class="regular">
-                        <td>15:15:20</td>
-                        <td>1.00000000</td>
-                        <td>1.00000000</td>
-                        <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
-                    </tr>
-                    <tr class="regular">
-                        <td>15:15:20</td>
-                        <td>1.00000000</td>
-                        <td>1.00000000</td>
-                        <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
-                    </tr>
-                    <tr class="regular">
-                        <td>15:15:20</td>
-                        <td>1.00000000</td>
-                        <td>1.00000000</td>
-                        <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
-                    </tr>
-                    <tr class="regular">
-                        <td>15:15:20</td>
-                        <td>1.00000000</td>
-                        <td>1.00000000</td>
-                        <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
-                    </tr>
-                    <tr class="regular">
-                        <td>15:15:20</td>
-                        <td>1.00000000</td>
-                        <td>1.00000000</td>
-                        <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
-                    </tr>
-                    <tr class="regular">
-                        <td>15:15:20</td>
-                        <td>1.00000000</td>
-                        <td>1.00000000</td>
-                        <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
-                    </tr>
-                    <tr class="regular">
-                        <td>15:15:20</td>
-                        <td>1.00000000</td>
-                        <td>1.00000000</td>
-                        <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
-                    </tr>
-                    <tr class="regular">
-                        <td>15:15:20</td>
-                        <td>1.00000000</td>
-                        <td>1.00000000</td>
-                        <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
-                    </tr>
-                    <tr class="regular">
-                        <td>15:15:20</td>
-                        <td>1.00000000</td>
-                        <td>1.00000000</td>
-                        <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
-                    </tr>
-                </table>
+                <div class="flex">
+                    <div class="w-25-4888-pt">
+                        <div class="text-white my-24 fz-26 medium text-center mr-4">
+                            <div class="click_game">All</div>
+                            <div class="click_game">Game</div>
+                            <div class="click_game">Bonus</div>
+                            <div class="click_game">Affliate</div>
+                            <div class="click_game">Vault</div>
+                            <div class="click_game">Swap</div>
+                        </div>
+                    </div>
+                    <div class="w-74-5111-pt">
+                        <table class="text-white w-full my-12 fz-20">
+                            <tr class="text-left fz-26 medium">
+                                <th class="w-3/6">Change Type/Time</th>
+                                <th class="w-2/6">Change Amount</th>
+                                <th class="w-1/6">After</th>
+                            </tr>
+                            <tr class="regular">
+                                <td>15:15:20</td>
+                                <td>1.00000000</td>
+                                <td class="cl-22C55E flex"><img src="/images/trending-up.png" alt="">2.00000000
+                                </td>
+                            </tr>
+                            <tr class="regular">
+                                <td>15:15:20</td>
+                                <td>1.00000000</td>
+                                <td class="cl-22C55E flex "><img src="/images/trending-up.png" alt="">2.00000000
+                                </td>
+                            </tr>
+                            <tr class="regular">
+                                <td>15:15:20</td>
+                                <td>1.00000000</td>
+                                <td class="cl-22C55E flex "><img src="/images/trending-up.png" alt="">2.00000000
+                                </td>
+                            </tr>
+                            <tr class="regular">
+                                <td>15:15:20</td>
+                                <td>1.00000000</td>
+                                <td class="cl-22C55E flex"><img src="/images/trending-up.png" alt="">2.00000000
+                                </td>
+                            </tr>
+                            <tr class="regular">
+                                <td>15:15:20</td>
+                                <td>1.00000000</td>
+                                <td class="cl-22C55E flex "><img src="/images/trending-up.png" alt="">2.00000000
+                                </td>
+                            </tr>
+                            <tr class="regular">
+                                <td>15:15:20</td>
+                                <td>1.00000000</td>
+                                <td class="cl-22C55E flex "><img src="/images/trending-up.png" alt="">2.00000000
+                                </td>
+                            </tr>
+                            <tr class="regular">
+                                <td>15:15:20</td>
+                                <td>1.00000000</td>
+                                <td class="cl-22C55E flex "><img src="/images/trending-up.png" alt="">2.00000000
+                                </td>
+                            </tr>
+                            <tr class="regular">
+                                <td>15:15:20</td>
+                                <td>1.00000000</td>
+                                <td class="cl-22C55E flex"><img src="/images/trending-up.png" alt="">2.00000000
+                                </td>
+                            </tr>
+                            <tr class="regular">
+                                <td>15:15:20</td>
+                                <td>1.00000000</td>
+                                <td class="cl-22C55E flex "><img src="/images/trending-up.png" alt="">2.00000000
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+
+                </div>
+
             </div>
             <!-- end-Bill -->
         </div>
-        
+
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
