--- a/tailwind/wallet_page.html
+++ b/tailwind/wallet_page.html
@@ -106,11 +106,12 @@
                         certain circumstances, might take longer in certain circumstances. As always we appreciate your
                         patience!</p>
                     <div>Withdraw Currency</div>
-                    <div class="rounded-lg bg-1f2937 py-2 my-6 pl-4">0.0000121</div>
+                    <input type="text" placeholder="0.0000121" class="rounded-lg w-full bg-1f2937 py-2 my-6 pl-4">
                     <div>Withdraw Email</div>
-                    <div class="rounded-lg bg-1f2937 py-2 my-6 pl-4">erenyeager_luv_mikasa@gmail.com</div>
+                    <input type="text" placeholder="erenyeager_luv_mikasa@gmail.com"
+                        class="rounded-lg w-full bg-1f2937 py-2 my-6 pl-4">
                     <div>Withdraw Amount</div>
-                    <div class="rounded-lg bg-1f2937 py-4 pl-4 my-6">0.0000121 </div>
+                    <input type="text" placeholder="0.0000121" class="rounded-lg w-full bg-1f2937 py-4 pl-4 my-6">
                     <div class="rounded-lg bg_3B82F6 py-4 text-center">Confirm</div>
                 </div>
                 <div class="w-2/4">
