--- a/tailwind/settings.html
+++ b/tailwind/settings.html
@@ -41,9 +41,15 @@
         <div class="w-4/5 m-ct">
             <h3 class="fz-48 semibold">Global Settings</h3>
         </div>
-        <div class="w-4/5 m-ct">
-            <div></div>
-            <div></div>
+        <div class="flex w-4/5 m-ct">
+            <div class="w-23-535-pt text-center fz-20 semibold">
+                <div class="click_game">General</div>
+                <div class="click_game">Privacy</div>
+                <div class="click_game">Security</div>
+                <div class="click_game">Active Sessions</div>
+            </div>
+            <div class="w-30-px"></div>
+            <div class="w-74-5111-pt">d</div>
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
