--- a/tailwind/desktop_11.html
+++ b/tailwind/desktop_11.html
@@ -233,14 +233,11 @@
             </div>
     </section>
     <section class="w-full bg-1f2937 py-12">
-        <div class="w-4/5 m-ct text-white medium fz-40">Your Bet History</div>
+        <div class="w-4/5 m-ct text-white medium fz-40">Statistic</div>
         <div class="flex text-white w-4/5 m-ct list-none semibold">
             <li class="pr-10 cl-bt"><a href="#">Daily</a></li>
             <li class="pr-10 cl-bt"><a href="#">Weekly</a></li>
             <li class="pr-10 cl-bt"><a href="#">Monthly</a></li>
-            <li class="regular">
-                <span>14</span>/<span>05</span>/<span>2020</span> - <span>21</span>/<span>05</span>/<span>2021</span>
-            </li>
         </div>
         <table class="text-white w-4/5 m-ct fz-20">
             <tr class="text-left fz-26 medium">
