--- a/tailwind/test_2.html
+++ b/tailwind/test_2.html
@@ -5,56 +5,12 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link rel="stylesheet" href="./custom.css">
 </head>
 <style>
     * {
         margin: 0;
         padding: 0;
-    }
-
-    .rating-css div {
-        color: #ffe400;
-        font-size: 30px;
-        font-family: sans-serif;
-        font-weight: 800;
-        text-align: center;
-        text-transform: uppercase;
-        padding: 20px 0;
-    }
-
-    .rating-css input {
-        display: none;
-    }
-
-    .rating-css input+label {
-        font-size: 60px;
-        text-shadow: 1px 1px 0 #ffe400;
-        cursor: pointer;
-    }
-
-    .rating-css input:checked+label~label {
-        color: #838383;
-    }
-
-    .rating-css label:active {
-        transform: scale(0.8);
-        transition: 0.3s ease;
-    }
-
-    /*This is my youtube channel link*/
-    a {
-        position: absolute;
-        bottom: 20px;
-        font-weight: 600;
-        text-decoration: none;
-        font-size: 20px;
-        font-family: sans-serif;
-        right: 20px;
-        color: #000;
-    }
-
-    a:hover {
-        color: red;
     }
 </style>
 
