--- a/tailwind/desktop_12.html
+++ b/tailwind/desktop_12.html
@@ -13,10 +13,10 @@
     <script src="/js/Chart.min.js"></script>
 </head>
 
-<body class="h-screen g-b">
+<body class="h-screen g-bs">
     <main>
         <div class="w-4/5 m-ct">
-            <div class="w-7/12 m-ct bg-1f2937 rounded-cssz25 text-white">
+            <div class="w-7/12 m-ct bg-1f2937 rounded-cssz40 text-white">
                 <div class="flex">
                     <div class="w-2/6 justify-center text-center">
                         <img class="m-ct-bl" src="/images/Frame.png" alt="">
@@ -39,10 +39,47 @@
                                 <label for="rating5" class="fa fa-star"></label>
                             </div>
                         </div>
+                        <div class="rounded-lg bg_374151 w-2/3 m-ct py-2">
+                            <div class="flex justify-center">
+                                <img src="/images/presentation-chart-bar.png" alt="">
+                                <span>Statistics</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="w-2/6">
-
+                        <div class="flex justify-center">
+                            <img src="/images/pencil-alt.png" alt=""><span>Edit Profile</span>
+                        </div>
                     </div>
+                </div>
+                <div class="flex">
+                    <div class="w-2/6 text-center">
+                        <span>0</span>
+                        <p>Total Wins</p>
+                    </div>
+                    <div class="w-2/6 text-center">
+                        <span>0</span>
+                        <p>Total Wins</p>
+                    </div>
+                    <div class="w-2/6 text-center">
+                        <span>0</span>
+                        <p>Total Wins</p>
+                    </div>
+                </div>
+                <div class="flex w-4/5 m-ct">
+                    <div class="mr-4 fz-32 semibold ">Medal</div>
+                    <div class="ml-4 fz-20 cl_3B82F6 regular pt-3">Detail</div>
+                </div>
+                <div class="flex list-item w-4/5 m-ct">
+                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
+                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
+                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
+                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
+                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
+                </div>
+                <div class="flex w-4/5 m-ct">
+                    <div class="mr-4 fz-32 semibold ">Top 3 Favorite Game</div>
+                    <div class="ml-4 fz-20 cl_3B82F6 regular pt-3">Detail</div>
                 </div>
             </div>
         </div>
