--- a/tailwind/desktop_12.html
+++ b/tailwind/desktop_12.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -16,13 +16,13 @@
 <body class="h-screen g-bs">
     <main>
         <div class="w-4/5 m-ct">
-            <div class="w-7/12 m-ct bg-1f2937 rounded-cssz40 text-white">
+            <div class="w-7/12 m-ct bg-1f2937 rounded-cssz40 text-white pb-12">
                 <div class="flex">
                     <div class="w-2/6 justify-center text-center">
                         <img class="m-ct-bl" src="/images/Frame.png" alt="">
                         <div><span>VIP</span> LV. <span>25</span></div>
                     </div>
-                    <div class="w-2/6 text-center">
+                    <div class="w-2/6 text-center pt-24">
                         <div class="rounded-full w-32 h-32 bg_374151 m-ct-bl"></div>
                         <div class="fz-26 semibold">Cuong Nguyen</div>
                         <div class="rating-css">
@@ -39,7 +39,7 @@
                                 <label for="rating5" class="fa fa-star"></label>
                             </div>
                         </div>
-                        <div class="rounded-lg bg_374151 w-2/3 m-ct py-2">
+                        <div class="rounded-lg bg_374151 w-2/3 m-ct py-2 my-6">
                             <div class="flex justify-center">
                                 <img src="/images/presentation-chart-bar.png" alt="">
                                 <span>Statistics</span>
@@ -47,12 +47,12 @@
                         </div>
                     </div>
                     <div class="w-2/6">
-                        <div class="flex justify-center">
+                        <div class="flex justify-center pt-20">
                             <img src="/images/pencil-alt.png" alt=""><span>Edit Profile</span>
                         </div>
                     </div>
                 </div>
-                <div class="flex">
+                <div class="flex my-12">
                     <div class="w-2/6 text-center">
                         <span>0</span>
                         <p>Total Wins</p>
@@ -70,21 +70,21 @@
                     <div class="mr-4 fz-32 semibold ">Medal</div>
                     <div class="ml-4 fz-20 cl_3B82F6 regular pt-3">Detail</div>
                 </div>
-                <div class="flex list-item w-4/5 m-ct">
+                <div class="flex list-item w-4/5 m-ct py-20">
                     <div class="rounded-lg w-24 h-24 bg_374151"></div>
                     <div class="rounded-lg w-24 h-24 bg_374151"></div>
                     <div class="rounded-lg w-24 h-24 bg_374151"></div>
                     <div class="rounded-lg w-24 h-24 bg_374151"></div>
                     <div class="rounded-lg w-24 h-24 bg_374151"></div>
                 </div>
-                <div class="flex w-4/5 m-ct">
+                <!-- <div class="flex w-4/5 m-ct">
                     <div class="mr-4 fz-32 semibold ">Top 3 Favorite Game</div>
                     <div class="ml-4 fz-20 cl_3B82F6 regular pt-3">Detail</div>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
 
 </body>
 
-</html>
+</html> -->
