--- a/tailwind/desktop_8.html
+++ b/tailwind/desktop_8.html
@@ -47,14 +47,14 @@
                                 class="fz-14 regular text-white">0.0000121</span>
                             BTC</div>
                     </div>
-                    <div class="bg-1f2937 rounded-lg py-12">
-                        <div class="flex w-4/5 m-ct">
-                            <div class="flex">
-                                <li><a href="#">Recent Crash</a></li>
+                    <div class="bg-1f2937 rounded-lg py-10">
+                        <div class="flex w-4/5 m-ct list-none py-2">
+                            <div class="flex w-3/4">
+                                <li class="mr-4"><a href="#">Recent Crash</a></li>
                                 <li><a href="#" class="cl_FDE047">House Edge 1%</a></li>
                             </div>
-                            <div class="flex">
-                                <li><a href="#">Trends</a></li>
+                            <div class="flex w-1/4 justify-end">
+                                <li class="mr-4"><a href="#">Trends</a></li>
                                 <li><a href="#">History</a></li>
                             </div>
                         </div>
