--- a/tailwind/desktop_8.html
+++ b/tailwind/desktop_8.html
@@ -235,38 +235,38 @@
                 <td class="cl-22C55E flex cl-EF4444 float-right"><img src="/images/trending-down.png" alt="">2.00000000
                 </td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Free Roll</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex cl-EF4444 float-right"><img src="/images/trending-down.png" alt="">2.00000000
                 </td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Classic Dice</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Free Roll</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
                 <td class="cl-22C55E flex float-right"><img src="/images/trending-up.png" alt="">2.00000000</td>
             </tr>
-            <tr class="border-b regular">
+            <tr class="regular">
                 <td>Crash</td>
                 <td>CrISABELLA44784ash</td>
                 <td>789465157121236</td>
